adjust units placement css

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<div class="col">
 							<h4 id="current-date"> Monday, 03:15
 							</h4>
-							<div class="tempUnits" id="current-temp">80°F / 72°F</div>
+							<div class="tempUnits" id="current-temp"></div>
 						</span>
 					</div>
 				</div>
