adjusted html,css,js
changed "click" to "submit" in search, changed span id of "last-updated",
moved .last-updated in css

--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
 								</span>
 							</div>
 						<br/>
-						<div class="col" id="last-updated">
-							<span >Last Updated:</span><h4 id="current-date"> 
+						<span id="last-updated">Last Updated:</span><h4 id="current-date"> 
 							</h4>
-							</span></div>
+							</span>
 						</div>
 						</div>
 						</div>
