--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 	<div class="container">
 	<div class="weather-app">
-				<form class="searchBar" id="search-city">
+				<form class="searchbar" id="search-city">
 					<input type="text" id="city-input" placeholder="Search for a city" />
 					<input type="submit" id="search-city" value="search" />
 					<div class="float-left">
