--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 	<div class="container">
 	<div class="weather-app">
-				<form class="searchbar" id="search-city">
+				<form class="searchBar" id="search-city">
 					<input type="text" id="city-input" placeholder="Search for a city" />
 					<input type="submit" id="search-city" value="search" />
 					<div class="float-left">
@@ -117,6 +117,7 @@
 			
 			<!--Moonphase & sunsets-->
 			<br/>
+			<strong><span class="github"><a href="https://github.com/velvetcreat/HW7_Ccamacho target=_blank">Open source</a><span>by Atomvlny</span></span></strong>
 			<span class="moonphase"> 🌘 Moon Phase: Waning Crescent </span>
 		</br>
 		
