--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			
 			<!--Moonphase & sunsets-->
 			<br/>
-			<strong><span class="github"><a href="https://github.com/velvetcreat/HW7_Ccamacho target=_blank">Open source</a><span>by Atomvlny</span></span></strong>
+			<strong class="github"><span ><a href="https://github.com/velvetcreat/HW7_Ccamacho target=_blank">Open source</a><span> by Atomvlny</span></span></strong>
 			<span class="moonphase"> 🌘 Moon Phase: Waning Crescent </span>
 		</br>
 		
