--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			
 			<!--Moonphase & sunsets-->
 			<br/>
-			<strong class="github"><span ><a href="https://github.com/velvetcreat/HW7_Ccamacho target=_blank">Open source</a><span> by Atomvlny</span></span></strong>
+			<h6><span><a href="https://github.com/velvetcreat/HW7_Ccamacho" target="_blank"class="github">Open source by Atomvlny</a></span></h6>
 			<span class="moonphase"> 🌘 Moon Phase: Waning Crescent </span>
 		</br>
 		
